// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common.List should not render items when empty 1`] = `
<ListGroup
  bsClass="list-group"
  className=""
/>
`;

exports[`Common.List should render items 1`] = `
<ListGroup
  bsClass="list-group"
  className=""
>
  <div
    className="list-item"
  >
    1
  </div>
  <div
    className="list-item"
  >
    2
  </div>
</ListGroup>
`;
